# qwt

./: .gitignore  CMakeLists.txt  README  build_ninja.bat  build_ninja6.bat  src.txt
QwtWaterfall/: CMakeLists.txt  magnifier.cpp  main.cpp  plot.cpp  qwt_plot_waterfall.h  wf_scale_draw.h
classincludes/: QwtPlot
examples/animation/: CMakeLists.txt  main.cpp
examples/barchart/: main.cpp
examples/bode/: main.cpp
examples/controls/: CMakeLists.txt  main.cpp
examples/cpuplot/: CMakeLists.txt  main.cpp
examples/curvedemo/: main.cpp
examples/dials/: main.cpp
examples/distrowatch/: main.cpp
examples/friedberg/: CMakeLists.txt  main.cpp
examples/itemeditor/: main.cpp
examples/legends/: main.cpp
examples/oscilloscope/: main.cpp
examples/polardemo/: main.cpp
examples/polarspectrogram/: main.cpp
examples/radio/: main.cpp
examples/rasterview/: main.cpp
examples/realtime/: main.cpp
examples/refreshtest/: main.cpp
examples/scatterplot/: main.cpp
examples/simpleplot/: main.cpp
examples/sinusplot/: main.cpp
examples/spectrogram/: main.cpp
examples/splineeditor/: main.cpp
examples/stockchart/: main.cpp
examples/sysinfo/: main.cpp
examples/tvplot/: main.cpp
playground/vectorfield/: CMakeLists.txt
src/: qwt_abstract_legend.h  qwt_command.h  qwt_picker.h  qwt_plot_canvas.h  qwt_plot_glcanvas.h  qwt_plot_item.h  qwt_plot_opengl_canvas.h  qwt_polar_picker.h
